# PROYECTO_FINAL

./: README
JUEGO_HEAD_SOCCER/: CMakeLists.txt  _GENERATE_Linux_x64.sh  _GENERATE_MinGW_x64.bat  _GENERATE_VS2015_x64.bat
JUEGO_HEAD_SOCCER/dependencies/glfw_sdk/include/: stb_image.h
JUEGO_HEAD_SOCCER/dependencies/glfw_sdk/include/GLFW/: glfw3.h
JUEGO_HEAD_SOCCER/dependencies/glfw_sdk/include/glad/: glad.h
JUEGO_HEAD_SOCCER/dependencies/glfw_sdk/include/learnopengl/: root_directory.h  shader_s.h
JUEGO_HEAD_SOCCER/dependencies/glfw_sdk/lib/x64/windows/vc14/Debug/: glfw3.lib
JUEGO_HEAD_SOCCER/dependencies/glfw_sdk/lib/x64/windows/vc14/Release/: glfw3.lib
JUEGO_HEAD_SOCCER/src/: view.cpp
JUEGO_HEAD_SOCCER/src/SHADERS/: shader_jugador.fs  shader_jugador.vs  shader_pantalla.fs  shader_pantalla.vs  shader_pelota.vs
