################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

#project( Tesis_GLFW_Project )

################################################################################
# Global Stuff
################################################################################
add_subdirectory( src )
